--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -107,20 +107,24 @@ format:
 <!-- Interoception definition -->
 Interoception is referred to the process of sensing, interpreting and integrating information pertaining to internal organs, such as the heart, the lungs or the gut [@khalsa2018]. While recent research emphasizes a key role of interoception in a variety of processes (e.g., emotion regulation, decision making) and of outcomes (physical and psychological well being), the field remains clouded by concerns pertaining to how interoception is assessed.
 
-<!-- Interocetpion measure -->
-Various measures of interoception have been developed, forming a combination of "objective" and "subjective" assessments (i.e., physiological tasks such as the heart beat counting or tracking vs. questionnaires and subjective scales involving a metacognitive reflection), "implicit" or "explicit" paradigms (i.e., directing participant’s awareness and attention to interoceptive processes), various interoceptive modalities (e.g., cardioception, respiroception, gastroception) and theoretical dimensions (e.g., sensitivity, awareness, or accuracy) (see figure 1). While there is no consensus as to which particular approach provides the most accurate and "pure" measure of interoception and interoceptive abilities (assuming it is a unidimensional construct), it is instead plausible that each measure has strengths and limitations, and a utility dependent on the context and goal at hand [@jahedi2014].
+<!-- Interoception measure -->
+Various measures of interoception have been developed (see **figure 1** [**TODO: add crossref**]), forming a combination of "objective" and "subjective" assessments (i.e., physiological tasks such as the heart beat counting or tracking vs. questionnaires and subjective scales involving a metacognitive reflection), "explicit" and "implicit" paradigms (i.e., directing participants' awareness and attention to interoceptive processes vs. measuring interoception unbeknownst to them), various interoceptive modalities (e.g., cardioception, respiroception, gastroception) and theoretical dimensions (e.g., sensitivity, awareness, accuracy). While there is no consensus as to which particular approach provides the most accurate and "pure" measure of interoception and interoceptive abilities (assuming it is a unidimensional construct), it is instead plausible that each measure has strengths and limitations, and a utility dependent on the context and goal at hand [@jahedi2014].
 
-For instance, while the use of self-reports questionnaires might seem at odds with the concept of interoception (appearing at first as a deeply embodied - almost non-cognitive - sensory function), recent redefinitions of interoception, emphasizing the role of high-level and metacognitive elaboration of interoceptive information, has provided the theoretical grounding to support the hypothesis that facets of interoception can be assessed with subjective measures [@murphy2019]. It is important to note that subjective interoceptive measures yield different results depending on which aspect of interoception is investigated, such as interoceptive attention compared to interoceptive accuracy [@murphy2019]. The present paper focuses on interoceptive accuracy. Moreover, the current subjective measures do not correlate well with the objective measures [@murphy2019] . Nonetheless, measuring interoception subjectively is highly useful, as it indicates the participants’ view of their own interoceptive abilities.
+<!-- self-reports -->
+For instance, while the use of self-reports questionnaires might seem at odds with the concept of interoception (appearing at first as a deeply embodied - almost non-cognitive - sensory function), recent redefinitions of interoception, emphasizing the role of high-level and metacognitive elaboration of interoceptive information, has provided the theoretical grounding to support the idea that some facets of interoception (including participants' metacognitive beliefs) can be assessed subjectively, providing useful and interesting measures [@murphy2019]. However, understanding the exact nature of what is being measured with different questionnaires is crucial, as self-reports might not reflect the same processes as other measures, seemingly contributing to an apparent lack of convergence in the field.
 
-![Figure 1. Different ways in which interoception can be measured.](images/measuring_interoception.png)
+![Figure 1. Different ways in which interoception can be measured.](figures/measuring_interoception.png)
+<!-- TODO: replace with include_ _figure that allows for legend -->
 
-### Introducing the IAS
+<!-- Introducing the IAS -->
+A recently developed scale with a rapidly growing popularity is the Interoceptive Accuracy Scale [IAS; @murphy2019]. The IAS consists of 21 Likert-scale items that query how accurately one can perceive different bodily signals, with one item per physiological mechanism such as respiration (*"I can always accurately perceive when I am breathing fast"*), heart (e.g *"I can always accurately perceive when my heart is beating fast"*), skin (e.g *"I can always accurately perceive when something is going to be ticklish"*), arousal or bodily functions like coughing (e.g *"I can always accurately perceive when I am going to cough"*), urinating (e.g. *"I can always accurately perceive when I need to urinate"*). Interestingly, the IAS' statements are about specific interoceptive behaviours, which is notable difference with other popular interoception questionnaires, such as the Multidimensional Assessment of Interoceptive Awareness scale [MAIA, @mehling2012], which items are more general and metacognitive (e.g., **TODO: add representative examples**).
 
-A recently developed scale with a rapidly growing popularity is the Interoceptive Accuracy Scale [IAS; @murphy2019]. The IAS consists of 21 Likert-scale items that query how accurately one can perceive different bodily signals, with one item per physiological mechanism such as respiration ("I can always accurately perceive when I am breathing fast"), heart (e.g "I can always accurately perceive when my heart is beating fast"), skin (e.g "I can always accurately perceive when something is going to be ticklish"), arousal or bodily functions like coughing (e.g "I can always accurately perceive when I am going to cough"), urinating (e.g. "I can always accurately perceive when I need to urinate"), etc. Interestingly, the IAS states specific examples, rather than broad claims, which is different to other interoception questionnaires, such as the multidimensional assessment of interoceptive awareness [MAIA, @mehling2012].
+<!-- IAS structure  -->
+Since its original publication, several studies have investigated the structure and validity of the IAS. @murphy2019 indicated a two-factor solution, measuring direct interoceptive signals, such as cardioception, and secondly, rather indirect factors such as bruising, which cannot be perceived by interoceptive signals alone. While the fit of the two-factor solution was passable, the fit was not perfect and requires further examination. In contrast, other studies have found unidimensional one-factor structures to be the best fit for the IAS ([@lin2023; @campos2021; @brand2023]. However, @lin2023 also elaborate that their correlation analysis showed five locally dependent pairs in three items with exceptionally high difficulty and low discrimination making them subjects for reduction, proposing a shortened version of the IAS (IAS-SF) with 12 items, while @campos2021 found that item "tickle" is representing a more specific, rather than a general factor, they argue that all items should be retained, given that items for the IAS are largely associated with interoceptive information. Interestingly, @brand2023 analyzed data of four different translations (all in German) of the IAS, some of which were more formal, but did not find any significant differences between the different versions. The IAS in the given studies were done in Chinese, Portuguese and in German, respectively. All mentioned recent studies indicate good psychometric measures with good test-retest reliability of the IAS.
 
-Since its original publication, several studies have investigated the structure and validity of the IAS. @murphy2019 indicated a two-factor solution, measuring direct interoceptive signals, such as cardioception, and secondly, rather indirect factors such as bruising, which cannot be perceived by interoceptive signals alone. While the fit of the two-factor solution is passable, the fit was not perfect and requires further examination. In contrast, other studies have found unidimensional one-factor structures to be the best fit for the IAS ([@lin2023; @campos2021; @brand2023]. However, @lin2023 also elaborate that their correlation analysis showed five locally dependent pairs in three items with exceptionally high difficulty and low discrimination making them subjects for reduction, proposing a shortened version of the IAS (IAS-SF) with 12 items, while @campos2021 found that item "tickle" is representing a more specific, rather than a general factor, they argue that all items should be retained, given that items for the IAS are largely associated with interoceptive information. Interestingly, @brand2023 analyzed data of four different translations (all in German) of the IAS, some of which were more formal, but did not find any significant differences between the different versions. The IAS in the given studies were done in Chinese, Portuguese and in German, respectively. All mentioned recent studies indicate good psychometric measures with good test-retest reliability of the IAS.
-
+<!-- Convergent validity (correlates)  -->
 Several measures have been used to assess convergent validity for the the IAS, including alexithymia, or neuroticism, or other interoception scales, such as the MAIA, which have previously correlated and used to validate each other [@brand2023]. Recent findings by @campos2021 suggest a significant positive correlation between the BPQ Body Awareness (BPQ-BA) and the IAS, which contradict @murphy2019 findings of the 2x2 factorial model of interoception, in which attention and accuracy are conceptualized as dissociable interoceptive dimensions. 
+<!-- Moreover, the current subjective measures do not correlate well with the objective measures [@murphy2019]. -->
 
 As recent findings report the IAS structure controversially, it becomes evident that further analysis into the structure of the IAS is needed. Additionally, the IAS could be developed further from a structural standpoint to be able to capture interoceptive accuracy and abilities accurately (e.g., Brand, et al., 2023). The present paper is divided into two parts. Firstly, it is trying to leverage existing datasets to do a meta-analysis contrasting the traditional structure analysis approach (CFA/SEM) with new approaches Exploratory Graph Analysis (EGA). Secondly, the present study provides an overview of the correlates of the IAS.
 
@@ -130,7 +134,7 @@ The goal of study 1 is to re-analyse the factor structure of the IAS, using mult
 
 # Method
 
-Data collection utilized Google Scholar’s cited-by feature, identifying 136 papers. To qualify for inclusion, papers needed to (1) provide accessible data, (2) employ the IAS as a measure, and (3) report individual IAS scores. A total of 15 samples were obtained.
+Data collection utilized Google Scholar's cited-by feature, identifying 136 papers. To qualify for inclusion, papers needed to (1) provide accessible data, (2) employ the IAS as a measure, and (3) report individual IAS scores. A total of 15 samples were obtained.
 
 ## Participants
 
@@ -165,9 +169,9 @@ To examine the factor structure of the IAS, a two-step approach was employed. Fi
 
 # Results
 
-Visualizing the distribution of the items for all samples suggests the presence of a consistent modal value (Fig. X). In other words,  participants are most likely to answer 4/5 (i.e., agree) on most items (but "affective touch", "blood sugar", and "bruise" that exhibit a different distributional pattern). Additionally, one can note the low density on extreme values (1 and 5), meaning that the bulk of answers **(87% TODO: get the actual statistic: what’s the proportion of non 1&5 answers for the likert scale samples)** varies between 3 values. The interindividual variability seems improved in the samples using an analogue scale, displaying a more continuous and progressive spread of answers.
+Visualizing the distribution of the items for all samples suggests the presence of a consistent modal value (Fig. X). In other words,  participants are most likely to answer 4/5 (i.e., agree) on most items (but "affective touch", "blood sugar", and "bruise" that exhibit a different distributional pattern). Additionally, one can note the low density on extreme values (1 and 5), meaning that the bulk of answers **(87% TODO: get the actual statistic: what's the proportion of non 1&5 answers for the likert scale samples)** varies between 3 values. The interindividual variability seems improved in the samples using an analogue scale, displaying a more continuous and progressive spread of answers.
 
-![**Figure 1.** Distribution of responses for all items across all datasets.](images/clipboard-1080495164.png){width="723"}
+![**Figure 1.** Distribution of responses for all items across all datasets.](figures/clipboard-1080495164.png){width="723"}
 
 ### Correlations 
 
@@ -187,7 +191,7 @@ When accounting for all samples, the factor analysis reveals that a 4-factor str
 
 In this study, several datasets were analyzed for a meta analysis of the structure of the IAS. The findings reveal that a 4-factor model fits the IAS best. Additionally, the lowest level structure (pairs of items) seem to be the most robust, especially for samples using Likert scales (some higher-order groupings might emerge for the 2 analog-scale samples). There was no clear evidence for higher-order factors. 
 
-These findings contrast with previous research, which all found that a 2-factor model, or a 1-factor model fits the data best [@murphy2019, @lin2023, @campos2021, @brand2023]. While this analysis also revealed an okay fit for the 1-factor model, the 4-factor model revealed the best fit. The 4-factor structure reveals different ‘hubs’ of items that are related, not only in this structure analysis, but also in underlying mechanisms. The ‘wind-burp-cough-sneeze-vomit’ category, for example, only entails items that are linked to excretion through the mouth. The other categories are organized similarly. This organization  and structure is useful for further analysis, as the data can be analyzed and interpreted according to a grouping that is coherent in result, as well as underlying mechanisms. 
+These findings contrast with previous research, which all found that a 2-factor model, or a 1-factor model fits the data best [@murphy2019, @lin2023, @campos2021, @brand2023]. While this analysis also revealed an okay fit for the 1-factor model, the 4-factor model revealed the best fit. The 4-factor structure reveals different ‘hubs' of items that are related, not only in this structure analysis, but also in underlying mechanisms. The ‘wind-burp-cough-sneeze-vomit' category, for example, only entails items that are linked to excretion through the mouth. The other categories are organized similarly. This organization  and structure is useful for further analysis, as the data can be analyzed and interpreted according to a grouping that is coherent in result, as well as underlying mechanisms. 
 
 There are several items that show redundancy suggesting that adapting the IAS would be beneficial for validity. Based on the given results, we suggest removing the tickle, while keeping the itch item (stats). Other items with slight redundancy were Hungry and Thirsty, Urinate and Defecate, and Sneeze and Cough.
 
@@ -239,7 +243,7 @@ The questionnaires used for the IAS correlates are listed in Table 2 (**TODO: ad
 | PI-18                      | 1                    | Beliefs about the world                 | 99              | 6-point Likert scale   |               |
 | LIE scale                  | 4                    | Lying tendencies                        | 16              | Visual analogue scales |               |
 
-*Note.* MAIA-2 Multidimensional Assessment of Interoceptive Awareness Version-2; BPQ Body Perception Questionnaire (Mehling et al. 2018); TAS-20 Toronto Alexithymia Scale (Bagby et al., 1994); BVAQ Bermond-Vorst Alexithymia Questionnaire (Vorst & Bermond, 2001); BDI-II Beck’s Depression Inventory (Dozois et al., 1998); PHQ-4 Patient Health Questionnaire (Kroenke et al., 2009); STAI-T State-Trait-Anxiety Inventory Trait-Version (Spielberger et al. 1970); GAD- 2 Generalized Anxiety Disorder Scale – 2 (Spitzer et al., 2007); NEO-FFI NEO Five-Factor Inventory Neuroticism (Costa & McCrae, 2008); Mini IPIP6 Mini International Personality Item Pool (Sibley et al. 2011); BFI Big Five Inventory (John et al., 2010); PID-5-SF Personality Inventory for DSM-5 Short Form (Thimm et al., 2016); SPQ-BRU Schizotypal Personality Questionnaire (Davidson et al., 2016); MSI-BPD Mclean Screening Instrument for Borderline Personality Disorder (Zanarini et al. 2003); ASQ Short Autism-Spectrum Quotient (Hoekstra et al. 2011); GCB Generic Conspiracist Beliefs scale (Brotherton et al.,  2013); PI-18 Primals Inventory (Clifton et al., 2021); LIE scale Lying Profile Questionnaire (Makowski, et al,. 2023).
+*Note.* MAIA-2 Multidimensional Assessment of Interoceptive Awareness Version-2; BPQ Body Perception Questionnaire (Mehling et al. 2018); TAS-20 Toronto Alexithymia Scale (Bagby et al., 1994); BVAQ Bermond-Vorst Alexithymia Questionnaire (Vorst & Bermond, 2001); BDI-II Beck's Depression Inventory (Dozois et al., 1998); PHQ-4 Patient Health Questionnaire (Kroenke et al., 2009); STAI-T State-Trait-Anxiety Inventory Trait-Version (Spielberger et al. 1970); GAD- 2 Generalized Anxiety Disorder Scale – 2 (Spitzer et al., 2007); NEO-FFI NEO Five-Factor Inventory Neuroticism (Costa & McCrae, 2008); Mini IPIP6 Mini International Personality Item Pool (Sibley et al. 2011); BFI Big Five Inventory (John et al., 2010); PID-5-SF Personality Inventory for DSM-5 Short Form (Thimm et al., 2016); SPQ-BRU Schizotypal Personality Questionnaire (Davidson et al., 2016); MSI-BPD Mclean Screening Instrument for Borderline Personality Disorder (Zanarini et al. 2003); ASQ Short Autism-Spectrum Quotient (Hoekstra et al. 2011); GCB Generic Conspiracist Beliefs scale (Brotherton et al.,  2013); PI-18 Primals Inventory (Clifton et al., 2021); LIE scale Lying Profile Questionnaire (Makowski, et al,. 2023).
 
 ### Statistical analysis
 
@@ -251,7 +255,7 @@ The EGA components capture groupings of pairs of items, such as "wind" and "burp
 
 Alexithymia is negatively correlated with all interoceptive groups. Autistic traits are mostly negatively correlated with IAS measure, except for patterns and numbers (as an autistic trait), which is significantly and positively correlated with the "itch/bruise" pairing. The BPQ Body Awareness part is positively correlated with all IAS pairs, whereas the Autonomic Reactivity part is negatively correlated with all IAS groupings. Conspiracy Beliefs were all positively correlated with the IAS pairs, however, only Global Conspiracy with "hungry/thirsty", "urinate/defecate" and "cough/sneeze", as well as personal wellbeing with "hungry/thirsty", and Information Control with "cough/sneeze" were significantly positively correlated. Demographic data is also mostly positively correlated with the IAS findings, where gender and age more strongly correlated with "hungry/thirsty". In this analysis, lying profile is not strongly correlated with the IAS; Except for contextuality, which shows a significant negative correlation with "itch/bruise". The MAIA has a strong positive correlation with most IAS pairings, except for the "not worrying" and "not distracting" items of the MAIA, which show less strong, or even negative correlations with all IAS item pairings. Maladaptiveness had mostly negative correlations with the IAS, with only a few significant correlations, namely "psychoticism", "negative affect", and "detachment" with "muscle/pain" and "hungry/thirsty", as well as "negative affect" with "wind/burp". Overall, mood was mostly negatively correlated with the IAS, where "hungry/thirsty" had the strongest negative correlation of all mood measures. Except for "neuroticism" and "honesty-humility", personality traits, such as "openness" and "extraversion" were positively correlated with the IAS groupings. Shizotypic traits were mostly negatively correlated with the IAS, with "hungry/thirsty" showing the strongest negative correlation between schizotypic and the IAS. World beliefs were mostly positively correlated with the IAS, however, only a few were significant: "hierarchical", "enticing", and "alive" correlates significantly with "muscle/pain"; "Understandable" has a significant positive correlation with "heart/breathing"; And  "hierarchical" and "alive" has a significant positive correlation with "hungry/thirsty". 
 
-![**Figure 2.** Correlates of the IAS](images/clipboard-1619164537.png){width="911"}
+![**Figure 2.** Correlates of the IAS](figures/clipboard-1619164537.png){width="911"}
 
 ## Discussion 
 
