--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -124,7 +124,11 @@ A recently developed scale with a rapidly growing popularity is the Interoceptiv
 Interestingly, the IAS' statements are about specific interoceptive behaviours, which is notable difference with other popular interoception questionnaires, such as the Multidimensional Assessment of Interoceptive Awareness scale [MAIA, @mehling2012], which items are more general and metacognitive (e.g., **TODO: add representative examples**).
 
 <!-- IAS structure  -->
-Since its original publication, several studies have investigated the structure and validity of the IAS. @murphy2019 indicated a two-factor solution, measuring direct interoceptive signals, such as cardioception, and secondly, rather indirect factors such as bruising, which cannot be perceived by interoceptive signals alone. While the fit of the two-factor solution was passable, the fit was not perfect and requires further examination. In contrast, other studies have found unidimensional one-factor structures to be the best fit for the IAS ([@lin2023; @campos2021; @brand2023]. However, @lin2023 also elaborate that their correlation analysis showed five locally dependent pairs in three items with exceptionally high difficulty and low discrimination making them subjects for reduction, proposing a shortened version of the IAS (IAS-SF) with 12 items, while @campos2021 found that item "tickle" is representing a more specific, rather than a general factor, they argue that all items should be retained, given that items for the IAS are largely associated with interoceptive information. Interestingly, @brand2023 analyzed data of four different translations (all in German) of the IAS, some of which were more formal, but did not find any significant differences between the different versions. The IAS in the given studies were done in Chinese, Portuguese and in German, respectively. All mentioned recent studies indicate good psychometric measures with good test-retest reliability of the IAS.
+The original validation study suggested a two-factor solution structure, the authors decided... **what?**, and underline the need for further investigation of the scale's factor structure [@murphy2019, *p. XX*].
+Most follow-up studies, using a confirmatory factor analysis approach (CFA) **(is that correct?)**, report unidimensional structures to be the best fit [@lin2023; @campos2021; @brand2023], although with some discussions about specific items. 
+For instance, @murphy2019 does mention that some items might be measuring direct interoceptive signals such as cardioception, while others, for instance "bruising", might capture phenomena that cannot be perceived through interoceptive signals alone (**Can you double check that this paper said this**). @lin2023 also highlights their correlation analysis showing five locally dependent pairs in three items with exceptionally high difficulty and low discrimination, and @campos2021 suggests that the "tickle" item is representing a more specific factor. 
+Recently, **@blabla** used a new approach, namely Exploratory Graph Analysis (EGA), and found that **TODO**.
+
 
 <!-- Convergent validity (correlates)  -->
 Several measures have been used to assess convergent validity for the the IAS, including alexithymia, or neuroticism, or other interoception scales, such as the MAIA, which have previously correlated and used to validate each other [@brand2023]. Recent findings by @campos2021 suggest a significant positive correlation between the BPQ Body Awareness (BPQ-BA) and the IAS, which contradict @murphy2019 findings of the 2x2 factorial model of interoception, in which attention and accuracy are conceptualized as dissociable interoceptive dimensions. 
